objects/ssot__RegulatoryCode__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDateTime__c</fullName>
        <label>Effective From Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDateTime__c</fullName>
        <label>Effective To Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalUrl__c</fullName>
        <label>External Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Regulatory Code Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsActive__c</fullName>
        <label>Is Active</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentRegulatoryCodeId__c</fullName>
        <label>Parent Regulatory Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryAuthorityId__c</fullName>
        <label>Regulatory Authority</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RegulatoryCodeType__c</fullName>
        <label>Regulatory Code Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1718545870329_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCode_ParentRegulatoryCodeI_rel</label>
        <referenceTo>ssot__RegulatoryCode__dlm</referenceTo>
        <relationshipLabel>RegulatoryCode_ParentRegulatoryCodeI_rel</relationshipLabel>
        <relationshipName>rel_1718545870329_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819539655_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RegulatoryCode_RegulatoryAuthorityId_rel</label>
        <referenceTo>ssot__RegulatoryAuthority__dlm</referenceTo>
        <relationshipLabel>RegulatoryCode_RegulatoryAuthorityId_rel</relationshipLabel>
        <relationshipName>rel_1719819539655_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>